# projeto-final-jose_davi

./: .gitignore  CMakeLists.txt  README.md  devenv.nix  interface.py  justfile  mbedtls_config.h  pyproject.toml
Etapa 1/: README.md
Etapa 2/: README.md
Etapa 3/: README.md
Etapa 4/: README.md
bitdoglab_mestre/: CMakeLists.txt  bitdoglab_mestre.c
bitdoglab_mestre/drivers/: i2c_config.c  keyboard_handler.c  mqtt_comm.c  wifi_conn.c
bitdoglab_mestre/include/: i2c_config.h  keyboard_handler.h
src/app/: CMakeLists.txt  bitdoglab_escrava.c  bitdoglab_mestre.c  definitions.h  hw_config.c  i2c_definitions.h  i2c_messages.c  i2c_messages.h  projeto_final.c  rfid_writter.c  slave.c
src/drivers/: CMakeLists.txt  aht10.c  aht10.h  bh1750.c  bh1750.h  bmp280.c  buzzer.c  current_time.c  current_time.h  display_oled.c  i2c_config.h  keyboard_handler.c  keyboard_handler.h  led_rgb.c  lwipopts.h  mqtt_comm.c  sd_card_handler.c  sd_card_handler.h  wifi_conn.c
src/hal/: CMakeLists.txt  i2c_messages.c  i2c_messages.h  uart_comm.c
src/include/: bmp280.h  buzzer.h  display_oled.h  led_rgb.h  mfrc522.h  mqtt_comm.h  uart_comm.h
src/test/: CMakeLists.txt  tests.c
